--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,12 +1,25 @@
 
-/* 
+.container {
+    display: grid;
+    gap: 2rem;
+    grid-auto-rows: 26rem;
+    grid-template-columns: repeat(auto-fill, minmax(18rem, 1fr));
+    padding: 2rem;
+    margin: 0;
+}
 
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
+.text-muted {
+    font-weight: 600;
+    color: aliceblue;  
+    padding: 16px;
+}
 
-*/
+.container-footer {
+   text-align: center;
+}
+
+.card {
+    min-width: 20rem;
+    max-width: 40rem;
+}
+
